# zillion-web

./: .env  .gitignore  AUTHORS.rst  CONTRIBUTING.md  LICENSE  README.md  docker-compose.extdb.dev.yml  docker-compose.extdb.yml  docker-compose.light.dev.yml  docker-compose.light.yml  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  backend.dockerfile
backend/app/: .gitignore  baseball_warehouse.json  covid_warehouse.json  initial_warehouses.json  prestart.sh  pyproject.toml  zillion_config.yaml
backend/app/alembic/: README  env.py
backend/app/alembic/versions/: d4867f3a4c0a_first_revision.py
backend/app/app/: __init__.py  main.py  plugin.py  utils.py
backend/app/app/.well-known/: ai-plugin.json
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: users.py  utils.py  warehouse.py
backend/app/app/core/: config.py
backend/app/app/db/: init_db.py
backend/app/app/models/: user.py
backend/app/app/schemas/: __init__.py  warehouse.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_login.py  test_users.py  test_warehouse.py
backend/app/app/tests/plugin/: test_plugin.py
backend/app/app/tests/utils/: utils.py
backend/app/scripts/: add_warehouse.py  init_embeddings.py  run_report.py  test-cov.sh  test.sh
frontend/: .env  .jsbeautifyrc  Dockerfile  package-lock.json  package.json  tsconfig.json  tslint.json  vue.config.js
scripts/: build-push.sh  build.sh  config.sh  deploy.sh  down.sh  repair_compose.mjs  run-local.sh  run-remote.sh  (+4 more)
(+82 files in other folders)
