[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
uvicorn = "^0.20.0"
fastapi = "^0.95.0"
python-multipart = "^0.0.5"
requests = "^2.28.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^8.1.0"
pydantic = {extras = ["email"], version = "^1.4"}
emails = "^0.5.15"
gunicorn = "^20.1.0"
jinja2 = "^2.11.2"
# Workaround jinja bug:
markupsafe = "2.0.1"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.15"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
rollbar = "^0.15.1"
# https://github.com/python-poetry/poetry/issues/2687
black = "^19.10b0"
zillion = {extras = ["nlp"], version = "0.9.13"}
orjson = "^3.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

